--- a/CSS/margin.css
+++ b/CSS/margin.css
@@ -1,3 +1,24 @@
 h1{
-    margin:150px;
+    margin:120px;
+    color:rgb(183, 0, 255);
+}
+
+.name{
+    border:5px solid;
+    font-size:5em;
+    width: 400px;
+    height: 200px;
+    margin:auto;
+    border-top : rgb(255, 51, 0);
+}
+
+#tag{
+    background-color: rgb(255, 230, 0);
+    margin-bottom: 35px;
+    box-shadow: 3px 3px 1px;
+}
+
+#Pname{
+    background-color: rgb(0, 229, 255);
+    box-shadow: 3px 3px 1px;
 }
