--- a/CSS/pseudoclass.css
+++ b/CSS/pseudoclass.css
@@ -15,3 +15,15 @@ a:active{
 a:visited{
     color:rgb(145, 167, 67);
 }
+
+li:hover{
+    background-color: rgb(134, 200, 232);
+}
+
+li:not(:hover){
+    background-color: rgb(202, 202, 90);
+}
+
+li:nth-child(3n+2){
+    background-color: rgb(163, 53, 121);
+}
