--- a/CSS/pseudoclass.css
+++ b/CSS/pseudoclass.css
@@ -27,3 +27,13 @@ li:not(:hover){
 li:nth-child(3n+2){
     background-color: rgb(163, 53, 121);
 }
+
+#greeting p{
+    background-color: rgb(96, 173, 208);
+    padding: 10px;
+    display:none;
+}
+
+#greeting:hover p{
+    display: block;
+}
