Done with navigation bar

--- a/CSS/dropdown.css
+++ b/CSS/dropdown.css
@@ -40,3 +40,15 @@
 .Dropdown a:hover{
     background-color: rgb(207, 207, 33);
 }
+
+<body>
+    <div class="Dropdown">
+      <button>Food</button>
+      <div class="container">
+        <a href="" id="Apple">Apple</a>
+        <a href="">Banana</a>
+        <a href="">Grapes</a>
+      </div>
+    </div> 
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut numquam quis dignissimos ab. Nisi, quis molestias incidunt quae sed veniam sunt a ratione, quisquam quibusdam inventore ad sint officia sit.</p>
+</body>
