--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -36,3 +36,23 @@ h1{
 .navbar li{
     float:left;
 }
+
+
+<body>
+    <div class="navbar">
+        <h1>Gems Tmg</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="product.html">Products</a></li>
+            <li><a href="help.html">Help</a></li>
+        
+        </ul>
+        
+    </div>
+
+    <main>
+        <h3>Welcome to the Page</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, asperiores? Enim illum laboriosam facere corrupti? Error impedit autem similique placeat magni in numquam. Molestiae aperiam labore culpa. Maxime, soluta illum.</p>
+    </main>
+</body>
