--- a/CSS/websitelayout.css
+++ b/CSS/websitelayout.css
@@ -43,3 +43,39 @@ footer{
     background-color: rgb(222, 222, 50);
     padding:25px;
 }
+
+@media and(max-width:600px) {
+    aside,section,article{
+        width:100%;
+    }
+}
+
+(
+    <body>
+    <header>Header</header>
+    <nav class="navbar">
+
+    </nav>
+    <main>
+        <aside>
+            <h2>This is aside</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos mollitia ipsam assumenda, sequi, error ut qui inventore dignissimos laborum eos dicta quis, labore molestias repellendus beatae consequuntur iure cum nesciunt!</p>
+        </aside>
+        <section>
+            <h2>This is a section</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat aliquid iste corrupti culpa saepe sequi laborum recusandae eveniet voluptate ducimus animi minima, laudantium libero quis quas incidunt, doloremque perspiciatis.</p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa nostrum doloribus voluptate nobis voluptatem, pariatur earum maxime, exercitationem vero alias possimus dignissimos consequuntur adipisci corrupti. Cupiditate quidem amet cumque fugit.</p>
+        </section>
+        <article>
+            <h2>This is an article</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat dignissimos quos aliquam corrupti pariatur similique autem dolor fugit labore non obcaecati facilis reiciendis eaque, eveniet qui numquam. Quaerat, exercitationem eaque.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur impedit, culpa id, itaque quod cum, est aliquam similique beatae consectetur? Iste maxime in accusamus, reprehenderit voluptate vitae neque expedita.</p>
+        </article>
+    </main>
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+</body>
+)
