--- a/CSS/transform.css
+++ b/CSS/transform.css
@@ -2,14 +2,26 @@ body{
     margin:0;
 }
 
-#box1{
-    width:250px;
-    height: 250px;
-    font-size: 10em;
+.box{
+    width:200px;
+    height: 200px;
+    font-size: 5em;
     text-align: center;
     border: 5px solid;
-    background-color: rgb(126, 216, 255);
+    transform: translateX(200px) rotateZ(45deg)scale(0.5);
+}
 
-    transform: translate(100px,100px );
+#box1{
     
+    background-color: rgb(126, 216, 255);
+}
+
+#box2{
+    
+    background-color: rgb(201, 220, 62);
+}
+
+#box3{
+    
+    background-color: rgb(197, 88, 135);
 }
